# laustracker

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.rst  Makefile  README  README.rst  configure
doxygen/: README  footer.html  index.html  publish.sh
examples/: CMakeLists.txt
examples/system_library/: CMakeLists.txt  README
examples/system_library/cmake/: FindLausTracker.cmake
examples/ueye_get_image/: CMakeLists.txt  ueye-get-image.cpp
include/laustracker/: color_conversion.h  conf.h  image_manipulation.h  labyrinth.h  laustracker.h  map.h  robots.h  util.h  version.h
ros/: Makefile  README
ros/src/laustracker2d/: CMakeLists.txt  laustracker2d.py  package.xml  setup.py
ros/src/laustracker3d/: CMakeLists.txt  README  laustracker3D.cpp  package.xml  robolaus.blend  robolaus.mtl
ros/src/ltcamnode/: CMakeLists.txt  laustracker-camnode.cpp  package.xml
ros/src/ltcamnode/srv/: getMaxExposureTime.srv  setAutoExposure.srv  setAutoGain.srv  setExposureTime.srv  setFrameRate.srv  setHardwareGain.srv
ros/src/ltlog/: CMakeLists.txt  ltlog.csv  ltlog.py  package.xml  plot-log.py  setup.py
ros/src/ltserver/: CMakeLists.txt  package.xml  server.cpp
ros/src/ltserver/msg/: Field.msg  Map.msg  Robot.msg
ros/src/ltxbee/: CMakeLists.txt  ltxbee-min.py  ltxbee.py  package.xml  setup.py  terminalcontroller.py
share/laustracker/: UI124xLE-C_conf.ini  UI124xLE-C_conf_aoi.ini  UI124xLE-C_conf_find_robots.ini  UI124xLE-C_conf_find_walls.ini  intrinsics.xml  labyrinth.conf  robots.conf
src/: CMakeLists.txt
src/calibrate/: CMakeLists.txt  README  calibrate.cpp  image_list.txt
src/cli/: CMakeLists.txt  README  cli.cpp
src/liblaustracker/: CMakeLists.txt  color_conversion.cpp  image_manipulation.cpp  labyrinth.cpp  laustracker.cpp  libraryinfo.h  map.cpp  robots.cpp  util.cpp  version.cpp
src/undistort/: CMakeLists.txt  README  undistort.cpp
src/video-record/: CMakeLists.txt  README  video-record.cpp
testdata/: labyrinth_pos.txt  map.txt
testdata/calibrate_aoi/: camera_info.txt
tools/share/cmake/: FindLausTracker.cmake  FindLog4Cxx.cmake  ecl_platform_detection.cmake
