# Christian Jann. Copyright (C) 2013. GPLv3.

#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED (VERSION 2.8.3)
PROJECT (laustracker)
SET (APPLICATION_NAME "Laustracker")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2011")
SET (APPLICATION_VERSION_MAJOR 1)
SET (APPLICATION_VERSION_MINOR 0)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET (APPLICATION_VENDOR_ID "janncc")
SET (APPLICATION_VENDOR_NAME "Christian Jann")
SET (APPLICATION_VENDOR_URL "www.jann.cc")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

SET(CMAKE_CXX_FLAGS "-std=c++0x")
#
# Debugging Options
#
SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release

#
# Project Output Paths
#
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")

#
# Project Search Paths
#
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/tools")
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/thirdparty")
SET (CMAKE_MODULE_PATH "${MAINFOLDER}/tools/share/cmake")
INCLUDE_DIRECTORIES("${MAINFOLDER}/include")

#
# Locate Project Prerequisites 
#
SET (Boost_ADDITIONAL_VERSIONS "1.39" "1.39.0" "1.40" "1.40.0" "1.41" "1.41.0" "1.42" "1.42.0" "1.43" "1.43.0" "1.44" "1.44.0" "1.45" "1.45.0" "1.46" "1.46.0" "1.47" "1.47.0" "1.48" "1.48.0" "1.49" "1.49.0" "1.50" "1.50.0")
FIND_PACKAGE (Boost 1.37 COMPONENTS "date_time" "filesystem" "graph" "iostreams" "program_options" "regex" "serialization" "signals" "system" "thread" "wserialization" REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
#FIND_PACKAGE (Qt4 REQUIRED)
#INCLUDE(UseQt4)
#FIND_PACKAGE (Log4Cxx REQUIRED)
#INCLUDE_DIRECTORIES(${Log4Cxx_INCLUDE_DIRS})
#LINK_DIRECTORIES(${Log4Cxx_LIBRARY_DIRS})
#FIND_PACKAGE (UnitTestPlusPlus REQUIRED)
#INCLUDE_DIRECTORIES(${UnitTestPlusPlus_INCLUDE_DIRS})
#LINK_DIRECTORIES(${UnitTestPlusPlus_LIBRARY_DIRS})

include(ecl_platform_detection)
ecl_detect_distro()
IF (${DISTRO_NAME} MATCHES "Ubuntu")
MESSAGE("-- Building on Ubuntu ${DISTRO_VERSION} ${DISTRO_VERSION_STRING}")
ENDIF (${DISTRO_NAME} MATCHES "Ubuntu")

find_package( OpenCV REQUIRED )
find_library(RT_LIBRARY rt REQUIRED)
FIND_PACKAGE(UEye REQUIRED)
FIND_PACKAGE(UEyeCam REQUIRED)

# Special hack for switching to 32-bit mode on Snow
# Leopard if Qt has been compiled for 32-bit, only.
#
# IF (APPLE)
#    IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
#       EXECUTE_PROCESS(
# 		COMMAND file "${QT_QTCORE_LIBRARY}"
# 		COMMAND grep "x86_64" -c
# 		OUTPUT_VARIABLE QT4_SUPPORTS_X86_64_OUTPUT
#       )
#       IF (NOT QT4_SUPPORTS_X86_64_OUTPUT MATCHES "0")
#           SET(QT4_SUPPORTS_X86_64 1)
#       ELSE (NOT QT4_SUPPORTS_X86_64_OUTPUT MATCHES "0")
#           SET(QT4_SUPPORTS_X86_64 0)
#       ENDIF (NOT QT4_SUPPORTS_X86_64_OUTPUT MATCHES "0")
# 
#       IF (QT4_SUPPORTS_X86_64)
#           SET(CMAKE_OSX_ARCHITECTURES x86_64)
#       ELSE (QT4_SUPPORTS_X86_64)
#           SET(CMAKE_OSX_ARCHITECTURES i386)
#       ENDIF (QT4_SUPPORTS_X86_64)
#    ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
# ENDIF (APPLE)


#
# Configure Files
#
FILE (GLOB_RECURSE CONFIGINPUTS1 include/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS2 include/*.h.in.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS3 liblaustracker/*.in.h.cmake)
FILE (GLOB_RECURSE CONFIGINPUTS4 liblaustracker/*.h.in.cmake)
#FILE (GLOB_RECURSE CONFIGINPUTS5 examples/qt_demo/*.in.h.cmake)
#FILE (GLOB_RECURSE CONFIGINPUTS6 examples/qt_demo/*.h.in.cmake)
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS1}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS2}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS3}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS4}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS5}")
LIST (APPEND CONFIGINPUTS "${CONFIGINPUTS6}")
FOREACH (CONFIGINPUT ${CONFIGINPUTS})
    STRING (REPLACE ".in.h.cmake" ".h" CONFIGOUTPUT1 "${CONFIGINPUT}")
    STRING (REPLACE ".h.in.cmake" ".h" CONFIGOUTPUT2 "${CONFIGOUTPUT1}")
    CONFIGURE_FILE ("${CONFIGINPUT}" "${CONFIGOUTPUT2}")
ENDFOREACH (CONFIGINPUT ${CONFIGINPUTS})

#
# Add Build Targets
#
ADD_SUBDIRECTORY(thirdparty) # this needs to be build first
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
#ADD_SUBDIRECTORY(ros)

#
# Add Install Targets
#
IF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")
    INSTALL(DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}" DESTINATION "include")
ENDIF (EXISTS "${MAINFOLDER}/include/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/include/${PROJECT_NAME}")

IF (EXISTS "${MAINFOLDER}/share/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/share/${PROJECT_NAME}")
    INSTALL(DIRECTORY "${MAINFOLDER}/share/${PROJECT_NAME}" DESTINATION "share")
ENDIF (EXISTS "${MAINFOLDER}/share/${PROJECT_NAME}" AND IS_DIRECTORY "${MAINFOLDER}/share/${PROJECT_NAME}")

#
# Add Documentation Targets
#
INCLUDE (DocumentationTargets)

# uninstall target
configure_file(
    "${CMAKE_MODULE_PATH}/cmake_uninstall.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
    IMMEDIATE @ONLY)

add_custom_target(uninstall
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
