FILE (GLOB_RECURSE cli_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

SET (cli_LIBS ${Boost_LIBRARIES} ${LAUSTRACKER_SHARED_LIBRARY} ${UEyeCam_LIBRARIES})
SET (cli_BIN ${PROJECT_NAME}-cli)

LINK_DIRECTORIES(${MAINFOLDER}/lib)

ADD_EXECUTABLE(${cli_BIN} ${cli_SRCS})
TARGET_LINK_LIBRARIES(${cli_BIN} ${cli_LIBS} ${RT_LIBRARY})

INSTALL(TARGETS ${cli_BIN} DESTINATION bin)

