<package>
  <name>laustracker3d</name>
  <version>1.0.0</version>
  <description>
    Laustracker3D
  </description>
  <maintainer email="christian.jann@ymail.com">Christian Jann</maintainer>
  <license>GPLv3</license>
  <url>http://www.jann.cc/2013/02/17/laustracker.html</url>

  <author email="christian.jann@ymail.com">Christian Jann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>

